-
Bug
-
Resolution: Done
-
P2: Important
-
4.8.x, 5.6.2, 5.9.0 Beta 1
To reproduce:
- Run MDI example
- press ctrl+n
- write some text
- select some text
- press alt+e (to open edit menu)
- press down arrow and press enter
- press alt+e again
- press down arrow and press enter
-> focus is set to QMenuBar
Reproducible at least on Windows 10 and Linux, but not Ubuntu with default window manager, which hijacks ALT key that causes window to lose focus momentarily.
- relates to
-
QTBUG-46812 Using a shortcut ALT + some_key in a QMenu can leave the QMenuBar highlighted when releasing the keys, causing the focus to be lost.
-
- Closed
-
| For Gerrit Dashboard: QTBUG-56860 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 203271,6 | Return focus to correct widget after showing menu | 5.9 | qt/qtbase | Status: MERGED | +2 | 0 |